[tool.poetry]
name = "yardstick-benchmark"
version = "0.1.1"
description = ""
authors = ["Jesse Donkervliet <j.donkervliet@gmail.com>"]
readme = "README.md"
packages = [{include = "scripts"}, {include = "yardstick_benchmark"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible-runner = "^2.3.3"
ansible = "^8.0.0"
plumbum = "^1.8.2"
pyyaml = "^6.0"
toml = "^0.10.2"

[tool.poetry.scripts]
dmult = "scripts.multipaper:deploy_mult"
dmult-b = "scripts.multipaper:deploy_bot"
dmult-t = "scripts.multipaper:start_telegraf"
smult-t = "scripts.multipaper:stop_telegraf"
fmult = "scripts.multipaper:fetch"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
