[tool.poetry]
name = "yardstick-benchmark"
version = "0.1.1"
description = ""
authors = ["Jesse Donkervliet <j.donkervliet@gmail.com>"]
readme = "README.md"
packages = [{include = "scripts"}, {include = "yardstick_benchmark"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible-runner = "^2.3.3"
ansible = "^8.0.0"
plumbum = "^1.8.2"
pyyaml = "^6.0"
toml = "^0.10.2"
mcrcon = "^0.7.0"
nbt = "^1.5.1"
mcipc = "^2.4.2"

[tool.poetry.scripts]
dmult = "scripts.multipaper:deploy_mult"
smult = "scripts.multipaper:stop_mult"
dmult-b = "scripts.multipaper:deploy_bot"
dmult-bs = "scripts.multipaper:start_bot"
dmult-t = "scripts.multipaper:start_telegraf"
smult-t = "scripts.multipaper:stop_telegraf"
dmult-pd = "scripts.multipaper:start_pdist_monitoring"
smult-pd = "scripts.multipaper:stop_pdist_monitoring"
mult-fetch = "scripts.multipaper:fetch"
mult-clean = "scripts.multipaper:clean"
mult-get-world_spawn = "scripts.multipaper:get_world_spawn_json"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
